# cumulus-pre-map-payload-grouping

./: CHANGELOG.md  README.rst  build.sh  pyproject.toml
.github/workflows/: build-pipeline.yml
cumulus_pre_map_payload_grouping/: cumulus_pre_map_payload_grouping.py
tests/: test_basic_functions.py
